--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@ p{ margin:10px auto}
 
 <p class="style11">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Email: &nbsp; r.yang1 AT leeds DOT ac DOT uk (main) or renyu.yang1 AT gmail DOT com &nbsp; </p>
 <p class="style11">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Links: &nbsp; 
-<a href="http://uk.linkedin.com/pub/renyu-yang/60/b5b/96/" target="_blank">
+<a href="https://www.linkedin.com/in/renyu-yang-096b5b60" target="_blank">
     <img src="icons/linkedin.jpg" width="30" height="30" border="0" alt="LinkedIn" title="LinkedIn"/></a>
 
 <a href="http://www.facebook.com/yang.renyu" target="_blank">
@@ -199,7 +199,10 @@ p{ margin:10px auto}
 <div id="div_news">
 <p class="Bolder">What's New</p>
 
-<p><span class="style11"> <span class="red">[Call for Papers]</span> <a href="call4papers/BDCC-SI-2022.pdf">"Machine Learning for Dependable Edge Computing Systems and Services"</a> Special Issue in the journal of Big Data and Cognitive Computing (BDCC), new deadline: <span class="red">31 Oct 2023</span> </span></p>
+<p><span class="style11"> <span class="red">[Call for Papers]</span> <a href="call4papers/BDCC-SI.pdf">"Machine Learning for Dependable Edge Computing Systems and Services"</a> Special Issue in the journal of Big Data and Cognitive Computing (BDCC), deadline: <span class="red">31 Oct 2023</span> </span></p>
+
+<p><span class="style11"> <span class="red">[Call for Papers]</span> <a href="call4papers/Electronics-SI.pdf">"Machine Intelligent Information Systems"</a> Special Issue in the journal of Electronics (SCI-indexed, IF=2.690), deadline: <span class="red">15 August 2023</span> </span></p>
+
 
 <p><span class="style11">(20/10/2022) Our work on Reinforced Self-supervised GNN Architecture Search is accepted by ACM Trans. on the Web. </span></p>
 
@@ -249,10 +252,8 @@ p{ margin:10px auto}
 	the last five years. I co-founded the highly successful and internationally leading research consortium COLAB between Leeds, 
 	Alibaba and Beihang University. I developed strong links with China-UK Computer 
 	Science community (such as Tsinghua University, Peking University, SJTU, NUDT, University of Edinburgh, 
-	Lancaster University, Newcastle University upon Tyne, etc.). I served as program co-chairs of IEEE International Conference on Joint Cloud Computing (JCC) 
-	2019 and 2020, and area chair of IEEE International Conference on Cloud Computing (CLOUD) 2021, guest editor of Big Data 
-	and Cognitive Computing Journal, review editor in Editorial Board of Frontiers in Big Data and Frontiers in HPC, and 
-	program committee member of top-tier conferences including IJCAI, ECAI, AAAI, CLOUD, HPCC, etc. 
+	Lancaster University, Newcastle University upon Tyne, etc.).  I was on the program committees of many conferences, 
+	including IJCAI, ECAI, AAAI, CLOUD, etc., and was also the program/area chair of multiple conferences. 
 </span>
 
 </div>
@@ -322,11 +323,13 @@ p{ margin:10px auto}
 
 <p><span class="style11">&bull; R. Yang, C. Hu, X. Sun, P. Garraghan, T. Wo, Z. Wen, H. Peng, J. Xu and C. Li. <a href="paper/tpds2020-rose.pdf" style="text-decoration: none">Performance-aware Speculative Resource Oversubscription for Large-scale Clusters</a>. IEEE TPDS 2020 [CCF A/CORE A*]</span></p>
 
-<p><span class="style11">&bull; Z. Wen, T. Lin, R. Yang, S. Ji, R. Ranjan, A. Romanovsky, C. Lin, J. Xu. <a href="paper/tpds2019-gapar-full.pdf" style="text-decoration: none">GA-Par: Dependable Microservice Orchestration Framework for Geo-Distributed Clouds</a>. IEEE TPDS 2019 [CCF A/CORE A]</span></p>
+<p><span class="style11">&bull; Z. Wen, T. Lin, R. Yang, S. Ji, R. Ranjan, A. Romanovsky, C. Lin, J. Xu. <a href="paper/tpds2019-gapar-full.pdf" style="text-decoration: none">GA-Par: Dependable Microservice Orchestration Framework for Geo-Distributed Clouds</a>. IEEE TPDS 2019 [CCF A/CORE A*]</span></p>
 
 <p><span class="style11">&bull; R. Yang, J. Zhu, C. Hu, T. Wo, S. Xue, J. Ouyang and J. Xu. <a href="paper/ccgrid2021.pdf" style="text-decoration: none">Perph: A Workload Co-location Agent with Online Performance Prediction and Resource Inference</a> <a href="paper/socc2019-perphon.pdf" style="text-decoration: none">(poster, demo)</a>. IEEE/ACM CCGRID 2021 [CORE A] ACM SoCC 2019 [CCF B]</span></p>
 
 <p><span class="style11">&bull; X. Sun, C. Hu, R. Yang, P. Garraghan, T. Wo, J. Xu, J. Zhu, C. Li.  <a href="paper/icdcs2018.pdf" style="text-decoration: none">ROSE: Cluster Resource Scheduling via Speculative Over-subscription</a> <a href="paper/sosp2017-poster.pdf" style="text-decoration: none">(poster, demo)</a>. IEEE ICDCS 2018 [CCF B/CORE A] ACM SOSP 2017 [CCF A/CORE A*]</span></p>
+
+<p><span class="style11">&bull; R. Yang, Y. Zhang, P. Garraghan, Y.Feng, J. Ouyang, J. Xu, Z. Zhang, C. Li. <a href="paper/tsc2016.pdf" style="text-decoration: none">Reliable Cloud Service in Massive-scale Systems through Effective Low-cost Failover.</a> IEEE TSC 2017 [CCF A/CORE A*, IF11.02]</span></p>
 
 <p><span class="style11">~$ pub -al More publications can be found in:
 <a href="publications.html" style="text-decoration: none">[Complete List]</a> 
@@ -347,15 +350,15 @@ I had the opportunity to work closely with many institutes around the world and 
 
 <p><span class="style11">~$  <strong> grants -l </strong> </span></p>
 
-<p><span class="style11">&bull; Large-scale GPU Cluster Scheduling, Industry-funded Collaboration, Co-I, 2022.7 - present </span></p> 
+<p><span class="style11">&bull; Algorithmic Scheduling Support for Efficient AI Model Training (~£35K), Kuaishou Research Gift Award, Co-I, 2023.1 - 2023.12 </span></p> 
 
-<p><span class="style11">&bull; Resilient Multi-Agent Deep Reinforcement Learning for Green Logistics Scheduling, funded by the Turing Enrichment Scheme, the Alan Turing Institute, PI, 2022.3 - present </span></p> 
+<p><span class="style11">&bull; Resilient Multi-Agent Deep Reinforcement Learning for Green Logistics Scheduling, funded by the Turing Enrichment Scheme, the Alan Turing Institute, PI, 2022.3 - 2022.10 </span></p> 
 
-<p><span class="style11">&bull; New Edge-Cloud Infrastructure for Distributed Intelligent Computing (£55K), funded by Turing Pilot Project, the Alan Turing Institute, Co-I, 2022.1 - present </span></p> 
+<p><span class="style11">&bull; New Edge-Cloud Infrastructure for Distributed Intelligent Computing (£55K), funded by Turing Pilot Project, the Alan Turing Institute, Co-I, 2022.1 - 2023.3 </span></p> 
 
-<p><span class="style11">&bull; Algorithmic Support for Massive Scale Distributed Systems (EP/T01461X/1, £1.1M) funded by UK Engineering and Physical Sciences Research Council (EPSRC), co-author and project leader, 2020.9 - present </span></p> 
+<p><span class="style11">&bull; Algorithmic Support for Massive Scale Distributed Systems (EP/T01461X/1, £1.1M) funded by UK Engineering and Physical Sciences Research Council (EPSRC), co-author and project leader, 2020.9 - 2023.8 </span></p> 
 
-<p><span class="style11">&bull; Farm Observatory Instrumentation, University of Leeds (£4M+), module lead, 2021.3 - present </span></p> 
+<p><span class="style11">&bull; Farm Observatory Instrumentation (£4M+), University of Leeds, module lead, 2021.3 - present </span></p> 
 
 <p><span class="style11">&bull; Server Modelling Capability (No.45904, £300K), funded by Innovate UK Programme, UKRI, co-author and module lead, 2020.2 - 2020.8 </span></p>
 
@@ -454,18 +457,14 @@ I have been collaborating closely with many brilliant researchers around the wor
 <p><span class="Bolder">Selected Professional Services </span></p>
 
 <p><span class="style11">&bull; Lead Guest Editor: <a href="call4papers/BDCC-SI-2022.pdf" style="text-decoration: none">"Machine Learning for Dependable Edge Computing Systems and Services"</a> Special Issue in the journal of Big Data and Cognitive Computing (BDCC) </span></p>
-
-<p><span class="style11">&bull; Review Editor on the Editorial Board of Frontiers in Big Data </span></p>
-<p><span class="style11">&bull; Review Editor on the Editorial Board of Frontiers in High Performance Computing </span></p>
-
+<p><span class="style11">&bull; Guest Editor: <a href="call4papers/Electronics-SI.pdf" style="text-decoration: none">"Machine Intelligent Information Systems"</a> Special Issue in the journal of Electronics (SCI-indexed, IF=2.690) </span></p>
+<p><span class="style11">&bull; Review Editor@Editorial Board: Frontiers in Big Data, Frontiers in High Performance Computing  </span></p>
 
 <p><span class="style11">&bull; Program Chair: IEEE International Conference on Joint Cloud Computing (JCC) 2020, 2019, etc. </span></p>
 
 <p><span class="style11">&bull; Area/Track Chair: IEEE International Conference on Cloud Computing (CLOUD) 2021. </span></p>
 
-
-<p><span class="style11">&bull; PC Member: IJCAI'21-'22, ECAI'21-'22, IEEE CLOUD'20-'22, ACM/IEEE UCC'18-'22,  IEEE/ACM BDCAT'16-'22, IEEE HPCC'21-'22 etc. </span></p>
-
+<p><span class="style11">&bull; PC Member: IJCAI, ECAI, AAAI, CLOUD, UCC, BDCAT, HPCC, etc. </span></p>
 
 <p><span class="style11">&bull; Journal Reviewers: TPDS, TDSC, TC, TKDE, TSC, TSE, TCC, TKDD, CSUR, etc. </span></p> 
 
@@ -515,7 +514,7 @@ I have been collaborating closely with many brilliant researchers around the wor
 </center>
 
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  </span></p>
-<p><span class="style11">  Updated by Oct 2022 </span></p>
+<p><span class="style11">  Updated by Dec 2022 </span></p>
 
  
 	
