--- a/services.html
+++ b/services.html
@@ -113,11 +113,14 @@ p{ margin:10px auto}
 <p><span class="style11">&bull; IEEE ESaaSA'14 (in conjuction with IEEE CLOSER 2014)</span></p>
 <p><span class="style11">&bull; IEEE IWES'14 (in conjuction with IEEE CloudCom 2014) </span></p>
 <p><span class="style11">&bull; IEEE FiCloud'16 (The IEEE 4th International Conference on Future Internet of Things and Cloud) </span></p>
-<p><span class="style11">&bull; IEEE/ACM BDCAT'16-'21 </span></p>
-<p><span class="style11">&bull; IEEE/ACM UCC'18-'20 </span></p>
-<p><span class="style11">&bull; IEEE CLOUD'21-'22' </span></p>
-<p><span class="style11">&bull; IJCAI'21-'22, ECAI'22 </span></p>
 <p><span class="style11">&bull; IEEE Workshop on Monitoring and Analysis for HPC Systems Plus Applications (HPCMASPA), in conjunction with IEEE CLUSTER 2021 </span></p>
+<p><span class="style11">&bull; IEEE/ACM UCC'18-'20 </span></p>
+<p><span class="style11">&bull; IEEE/ACM BDCAT'16-now </span></p>
+<p><span class="style11">&bull; IEEE CLOUD'21-now </span></p>
+<p><span class="style11">&bull; IEEE HPCC'22-now </span></p>
+<p><span class="style11">&bull; IJCAI'21-now </span></p>
+<p><span class="style11">&bull; AAAI'22-now </span></p>
+
 
 <p><span class="style11"><strong> Conferences Organizer: </strong></span></p>
 <p><span class="style11">&bull; Organizer: GECON'19, IEEE ISORC'12, IEEE iVCE'12, CoLaB Workshop'12-'14</span></p>
@@ -130,7 +133,7 @@ p{ margin:10px auto}
 
  
 <p lang="en-US">&nbsp;&nbsp; <span class="incline"> </span> &nbsp; &nbsp;</p>
-<p><span class="style11">Updated by June 2022 </span> &nbsp; &nbsp;</p>
+<p><span class="style11">Updated by Dec 2022 </span> &nbsp; &nbsp;</p>
 
 </p>
 </td>
