--- a/news.html
+++ b/news.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=us-ascii">
+
         <meta http-equiv="Content-Type" content="text/html; charset=gb2312">
         <meta charset="utf-8">
 <style type="text/css">
@@ -18,12 +18,14 @@
 	{font-size:24px}
 .incline
 	{font-style:italic;
+	 font-size:11pt;
 	 font-family:Arial,"\6977 \4F53 "}
 .bolder
 	{font-weight:bold}
 .red
 	{text-align:justify;
-	font-size:12pt;
+	font-size:11pt;
+	font-weight: bold;
 	font-family:Arial,"\6977 \4F53 ";
 	color:#F00}
 .blue_paper_title
@@ -39,12 +41,12 @@
 	{text-align:center}
 .style10
 	{text-align:left;
-	font-size:16pt;
+	font-size:14pt;
 	font-weight: bold;
 	font-family:Arial,"\6977 \4F53 "}
 .style11
 	{text-align:left;
-	font-size:12pt;
+	font-size:11pt;
 	font-family:Arial,"\6977 \4F53 "}
 .style12
 	{text-align:justify;
@@ -73,7 +75,18 @@ p{ margin:10px auto}
 <title>Renyu YANG's Homepage</title>
 <body>
 <p><span class="Bolder">Events</span></p>
-  
+
+<p><span class="style11">(20/10/2022) Our work on Reinforced Self-supervised GNN Architecture Search is accepted by ACM Trans. on the Web. Congrats to Yingguang! </span></p>
+
+<p><span class="style11">(23/08/2022) Our work on QoS-Aware Co-Scheduling is accepted by IEEE Trans. on Parallel and Distributed Systems. Big congrats to Jianyong and Xiaoyang! </span></p>
+
+<p><span class="style11">(18/07/2022) Our work on "Incentivizing Online Edge Caching via Auction-Based Subsidization" is accepted by 19th IEEE International Conference on Sensing, Communication, and Networking (SECON)! Big congrats to Youmei! </span></p>
+
+<p><span class="style11">(14/06/2022) Our work on "STRONGHOLD: Fast and Affordable Billion-scale Deep Learning Model Training" is accepted by the International Conference for High Performance Computing, Networking, Storage, and Analysis (SC) 2022! Big congrats to Xiaoyang and Shenghao! 
+</span></p>
+
+<p><span class="style11">(27/01/2022) received Alan Turing Institute Post-Doctoral Enrichment Award 2022.  
+</span></p>
 
 <p><span class="style11">(01/11/2021) One survey paper on text classification is accepted by ACM Trans. on  Intelligent Systems and Technology (TIST). 
 </span></p>
