--- a/index.html
+++ b/index.html
@@ -168,15 +168,11 @@ p{ margin:10px auto}
 <div align="left">
 &nbsp;
 </div>
-
 </td>
-
-
 <td align="left">
 <div align="left">
 &nbsp;
 </div>
-
 
 <center>
 <p><span class="STYLE17">
@@ -199,9 +195,15 @@ p{ margin:10px auto}
 <div id="div_news">
 <p class="Bolder">What's New</p>
 
-<p><span class="style11"> <span class="red">[Call for Papers]</span> <a href="call4papers/BDCC-SI.pdf">"Machine Learning for Dependable Edge Computing Systems and Services"</a> Special Issue in the journal of Big Data and Cognitive Computing (BDCC), deadline: <span class="red">31 Oct 2023</span> </span></p>
+<p><span class="style11"> <span class="red">[Call for Papers]</span> <a href="call4papers/BDCC-SI.pdf" style="text-decoration: none">"Machine Learning for Dependable Edge Computing Systems and Services"</a> Special Issue in the journal of Big Data and Cognitive Computing (BDCC), deadline: <span class="red">31 Oct 2023</span> </span></p>
 
-<p><span class="style11"> <span class="red">[Call for Papers]</span> <a href="call4papers/Electronics-SI.pdf">"Machine Intelligent Information Systems"</a> Special Issue in the journal of Electronics (SCI-indexed, IF=2.690), deadline: <span class="red">15 August 2023</span> </span></p>
+<p><span class="style11"> <span class="red">[Call for Papers]</span> <a href="call4papers/Electronics-SI.pdf" style="text-decoration: none">"Machine Intelligent Information Systems"</a> Special Issue in the journal of Electronics (SCI-indexed, IF=2.690), deadline: <span class="red">15 August 2023</span> </span></p>
+
+<p><span class="style11"> <span class="red">[top]</span> I will be joining Beihang University as Associate Professor in Summer 2023. I'm actively looking for strong and motivated students and welcome applicants from diverse backgrounds. </span></p>
+
+<p><span class="style11">(21/02/2023) Our work on affinity-aware multi-dimensional time-varying resource packing is accepted by Journal of Parallel and Distributed Computing (JPDC). The <a href="https://github.com/DSSGroup-Leeds/LRA-binpacking-expe" style="text-decoration: none"> algorithm suite </a> is publicly available. </span></p>
+
+<p><span class="style11">(25/01/2023) Two papers are accepted by the Web Conference (WWW'23). Many congrats to Yingguang, Dongcheng and Xiang! </span></p>
 
 <p><span class="style11">~$ No news is good news...Check <a href="news.html">older events</a>. </span></p>
 </div>
@@ -227,7 +229,7 @@ p{ margin:10px auto}
 </span>
 
 <p><span class="style11"> I have published 50+ refereed journal and conference papers, including top ACM/IEEE Transactions and conference 
-	proceedings such as TPDS, TC, TKDE, TNNLS, TSC, TOIS, TKDD, ACM Computing Surveys (CSUR), VLDB, SC, ICDCS, DSN, SoCC, SECON, 
+	proceedings such as TPDS, TC, TKDE, TNNLS, TSC, TOIS, TKDD, JPDC, ACM Computing Surveys (CSUR), VLDB, SC, WWW, ICDCS, DSN, SoCC, SECON, 
 	etc. I won the Best Paper Award in IEEE ISADS 2013 for energy-efficient computing and Alan Turing Institute Post-Doctoral 
 	Enrichment Award 2022 for resilient deep reinforcement learning, and was awarded the Grand Class of Scientific and 
 	Technological Progress Award of Chinese Institute of Electronics of year 2017 (the only grand class award since the award is established) 
@@ -292,7 +294,11 @@ p{ margin:10px auto}
 
 <p><span class="style11">~$ pub -rl</span></p> 
 
-<p><span class="style11">&bull; R. Yang, J. Zhu, X. Sun, T. Wo, C. Hu, H. Peng, J. Xiao, A. Y. Zomaya, J. Xu. <a href="paper/tpds2022-toposcaling.pdf" style="text-decoration: none">QoS-Aware Co-Scheduling for Distributed Long-Running Applications on Shared Clusters</a>, IEEE TPDS 2022 [CCF A/CORE A*] </span></p>
+<p><span class="style11">&bull; D. Zou, H. Peng, X. Huang, R. Yang, J. Li, J. Wu, C. Liu, P. S. Yu. <a href="paper/www2023-segsl.pdf" style="text-decoration: none">SE-GSL: A General and Effective Graph Structure Learning Framework through Structural Entropy Optimization</a>. ACM WWW 2023 [CCF A/CORE A*] </span></p>
+
+<p><span class="style11">&bull; Y. Yang, R. Yang, Y. Li, H. Peng, T. Li, Y. Liao, P. Zhou. <a href="paper/www2023-fedack.pdf" style="text-decoration: none">FedACK: Federated Adversarial Contrastive Knowledge Distillation for Cross-Lingual and Cross-Model Social Bot Detection</a>. ACM WWW 2023 [CCF A/CORE A*] </span></p>
+
+<p><span class="style11">&bull; R. Yang, J. Zhu, X. Sun, T. Wo, C. Hu, H. Peng, J. Xiao, A. Y. Zomaya, J. Xu. <a href="paper/tpds2022-toposcaling.pdf" style="text-decoration: none">QoS-Aware Co-Scheduling for Distributed Long-Running Applications on Shared Clusters</a>. IEEE TPDS 2022 [CCF A/CORE A*] </span></p>
 
 <p><span class="style11">&bull; Y. Song, L. Jiao, R. Yang, T. Wo and J. Xu. <a href="paper/secon2022.pdf" style="text-decoration: none">Incentivizing Online Content Caching in Distributed Edge Networks via Auction-Based Subsidization</a>. IEEE SECON 2022 [CCF B] </span></p>
 
@@ -377,16 +383,15 @@ I had the opportunity to work closely with many institutes around the world and 
 I have been co-advising and/or working closely with many students/PDRAs mainly from COLAB. The programmes primarily include PhD and postgraduate projects (MSc research programme in China and MSc projects of module COMP5200M and COMP3211 in University of Leeds.) </span></p>
 
 <p><span class="style11">~$  <strong> team -l current </strong> </span></p>
-<p><span class="style11">&bull; PhD Students: <a href="https://xshaun.github.io/" style="text-decoration: none">Xiaoyang Sun</a> (2019.9- , Uni of Leeds, with Prof. Jie Xu and Prof. Zheng Wang), Yiming Hei (2019.9- , BDBC and Beihang Uni., with Prof. Jianwei Liu and Dr. Hao Peng), Youmei Song (2017.9- , BDBC and Beihang Uni., with Prof. Tianyu Wo), Jiayu Zhao (2021.9- , Uni of Leeds, with Prof. Zheng Wang), Yingguang Yang (2021.7-, USTC, with Prof. Haiyong Xie and Dr. Hao Peng) </span></p>
+<p><span class="style11">&bull; PhD Students: <a href="https://xshaun.github.io/" style="text-decoration: none">Xiaoyang Sun</a> (2019.9- , Uni of Leeds, with Prof. Jie Xu and Prof. Zheng Wang), Youmei Song (2017.9- , BDBC and Beihang Uni., with Prof. Tianyu Wo), Jiayu Zhao (2021.9- , Uni of Leeds, with Prof. Zheng Wang), Yingguang Yang (2021.7-, USTC, with Prof. Yong Liao and Dr. Hao Peng) </span></p>
 <p><span class="style11">&bull; PDRA Cohort: Dr. Satish Kumar, Dr. Zeinab Nezami, Dr. Clément Mommessin, etc. </span></p>
 <p><span class="style11">&bull; BSc Students: Leo Bishop, Danielle Kushnir, Thomas Killeen, Dominik Strak (BSc, 2022-2023, Uni. of Leeds, with Prof. Jie Xu) </span></p>
-
 
 <p><span class="style11">~$  <strong> team -l alumni </strong> </span></p>
 
 <p><span class="style11">&bull; Jianyong Zhu (PhD., 2017.9-2022.3 , BDBC and Beihang Uni., with Prof. Chunming Hu, first employment Assistant Professor at NCEPU)</span></p>
-<p><span class="style11">&bull; <a href="https://uk.linkedin.com/in/gingfung-matthew-yeung-a71688a2" style="text-decoration: none">Gingfung Yeung</a> (PhD., 2019.1-2021.12, Lancaster University, UK, with Dr. Peter Garraghan, first employment at Huawei UK) </span></p>
-
+<p><span class="style11">&bull; <a href="https://uk.linkedin.com/in/gingfung-matthew-yeung-a71688a2" style="text-decoration: none">Gingfung Yeung</a> (PhD., 2019.1-2021.12, Lancaster University, UK, with Dr. Peter Garraghan, first employment Research Scientist at Huawei R&D UK) </span></p>
+<p><span class="style11">&bull; Yiming Hei (PhD., 2019.9-2022.1, BDBC and Beihang Uni., with Prof. Jianwei Liu and Dr. Hao Peng)
 <p><span class="style11">&bull; Zhihao Yuan, Junhao Wei, Yifan Zhang, Wenjie Xia, Yixin Jiang, Kaidi Jin, Qian Chu (MSc. of COMP5200M, 2022 Spring, Uni. of Leeds, with Prof. Jie Xu) </span></p>
 
 <p><span class="style11">&bull; Chris von Fay-Siebenburgen, Ziyao Wang, Zixuan Xu, Jacob Hall, Adam Stoddart (BSc, 2021-2022, Uni. of Leeds, with Prof. Jie Xu) </span></p>
@@ -398,7 +403,7 @@ I have been co-advising and/or working closely with many students/PDRAs mainly f
 <p><span class="style11">&bull; Jaber Almutairi (PhD., 2018.6 - 2020.1, Uni. of Leeds, with Prof. Jie Xu, first employment CEO at TaibahValley, KSA), Xiaochen Sun (2019.9-2020.9, Uni. of Leeds, Visiting PhD. Student from ISCAS, with Prof. Jie Xu) 
 </span></p> 
 
-<p><span class="style11">&bull;  Shiqing Xue (2018.9-2020.12, Beihang Uni.), Dr. Qi Shen (2017.9-2019.8, Postdoc researcher, Beihang Uni.) 
+<p><span class="style11">&bull;  Shiqing Xue (2018.9-2020.12, Beihang Uni., first employment at Tecent Group), Dr. Qi Shen (2017.9-2019.8, Postdoc researcher, Beihang Uni.) 
 </span></p>
 
 <p><span class="style11">&bull;  Xuyang Cao, Yuecheng Pei, Yuncheng Xie, Guoxiang Liao (MSc of COMP5200M, 2019.4-2019.9, Uni. of Leeds) </span></p>
@@ -443,7 +448,7 @@ I have been collaborating closely with many brilliant researchers around the wor
 <div id="div_services">
 <p><span class="Bolder">Selected Professional Services </span></p>
 
-<p><span class="style11">&bull; Lead Guest Editor: <a href="call4papers/BDCC-SI-2022.pdf" style="text-decoration: none">"Machine Learning for Dependable Edge Computing Systems and Services"</a> Special Issue in the journal of Big Data and Cognitive Computing (BDCC) </span></p>
+<p><span class="style11">&bull; Lead Guest Editor: <a href="call4papers/BDCC-SI.pdf" style="text-decoration: none">"Machine Learning for Dependable Edge Computing Systems and Services"</a> Special Issue in the journal of Big Data and Cognitive Computing (BDCC) </span></p>
 <p><span class="style11">&bull; Guest Editor: <a href="call4papers/Electronics-SI.pdf" style="text-decoration: none">"Machine Intelligent Information Systems"</a> Special Issue in the journal of Electronics (SCI-indexed, IF=2.690) </span></p>
 <p><span class="style11">&bull; Review Editor@Editorial Board: Frontiers in Big Data, Frontiers in High Performance Computing  </span></p>
 
