--- a/publications.html
+++ b/publications.html
@@ -77,7 +77,7 @@ p{ margin:10px auto}
 
 <br>
 <!--table width="1550" height="359"-->
-<table style="width: 85%; height: auto;">
+<table style="width: 90%; height: auto;">
 <tbody>
 
 <tr>
@@ -100,12 +100,22 @@ p{ margin:10px auto}
 
 <p><span class="style10">Recent Publications (By Year) &nbsp;&nbsp;&nbsp; <a href="./index.html">[home]</a> 
 	<a href="./publications_topics.html">[topics]</a>
-	<a href="./publications.html">[years] </a></span>&nbsp;&nbsp; &nbsp;&nbsp;</p>
+	<a href="./publications.html">[years]</a></span>&nbsp;&nbsp; &nbsp;&nbsp;</p>
 
 <hr style="width:100%;text-align:left;margin-left:0">
 
 <p lang="en-US"><span class="incline"> Notice: The copyright of these papers is with the respective publishers. It is being reproduced here for timely dissemination of scholarly information.   </span> &nbsp; &nbsp;</p>
 <p lang="en-US"><span class="incline"> * = corresponding author of the paper with students or team members supervised by me. '= co-first authors with equal contribution by alphabetical order </span> &nbsp; &nbsp;</p>
+
+<p lang="en-US"><span class="red">2023</span></p>
+
+<p><span class="style11">&bull; C. Mommessin', R. Yang'*, N. Shakhlevich, X. Sun, S. Kumar, J. Xiao, J. Xu. Affinity-Aware Resource Provisioning for Long-Running Applications in Shared Clusters, Journal of Parallel and Distributed Computing (JPDC) 
+<a href="paper/jpdc2023.pdf">[paper]</a> <a href="https://arxiv.org/pdf/2208.12738.pdf">[arxiv]</a>
+</span></p>
+
+<p><span class="style11">&bull; Y. Yang, R. Yang*, H. Peng, Y. Li, T. Li, Y. Liao, P. Zhou. FedACK: Federated Adversarial Contrastive Knowledge Distillation for Cross-Lingual and Cross-Model Social Bot Detection, ACM the Web Conference (WWW) <a href="paper/www2023-fedack.pdf">[paper]</a></span></p>
+
+<p><span class="style11">&bull; D. Zou, H. Peng, X. Huang, R. Yang, J. Li, J. Wu, C. Liu, P. S. Yu. SE-GSL: A General and Effective Graph Structure Learning Framework through Structural Entropy Optimization, ACM the Web Conference (WWW) <a href="paper/www2023-segsl.pdf">[paper]</a></span></p>
 
 <p lang="en-US"><span class="red">2022</span></p>
 
@@ -120,7 +130,6 @@ p{ margin:10px auto}
 <p><span class="style11"> &bull; X. Sun, W. Wang, S. Qiu, R. Yang, S. Huang, J. Xu, Z. Wang. STRONGHOLD: Fast and Affordable Billion-scale Deep Learning Model Training. IEEE/ACM International Conference for High Performance Computing, Networking, Storage, and Analysis (SC)
  <a href="paper/sc2022.pdf">[paper]</a> 
 </span></p>
-
 
 <p><span class="style11"> &bull; G. Yeung, B. Borowiec, R. Yang*, A. Friday, R. Harper, P. Garraghan. Horus: Interference-aware and Prediction-based Scheduling in Deep Learning Systems. IEEE Trans. on Parallel and Distributed Systems (TPDS) 
 <a href="paper/tpds2021-horus.pdf">[paper]</a> 
@@ -139,12 +148,7 @@ p{ margin:10px auto}
 <p><span class="style11">&bull; Z. Wen, H. Hu, R. Yang*, B. Qian, R. Sham, R. Sun, J. Xu, P. Patel, O. Rana, S. Dustdar, R. Ranjan. Orchestrating Networked Machine Learning Applications using Autosteer, IEEE Internet Computing <a href="paper/ic2022.pdf">[paper]</a> 
 </span></p>
 
-<p><span class="style11">&bull; C. Mommessin', R. Yang', N. Shakhlevich, X. Sun, S. Kumar, J. Xiao, J. Xu. Affinity-Aware Resource Provisioning for Long-Running Applications in Shared Clusters. arXiv Preprint, arXiv:2208.12738
-<a href="https://arxiv.org/pdf/2208.12738.pdf">[arxiv]</a>
-
-
-</span></p>
-
+ 
 
 <p lang="en-US"><span class="red">2021</span></p>
 
@@ -152,7 +156,7 @@ p{ margin:10px auto}
 Contrastive Learning for UAV Anomaly Detection,  IEEE Trans. on Knowledge and Data Engineering (TKDE) <a href="paper/tkde2021-bissiam.pdf">[paper]</a> 
 </span></p>
 
-<p><span class="style11">&bull; Y. Hei', R. Yang', H. Peng, L. Wang, X. Xu, J. Liu, H. Liu, J. Xu, L. Sun. Hawk: Reliable Android Malware Detection through Heterogeneous Graph Neural Network. IEEE Trans. on Neural Networks and Learning Systems (TNNLS)  <a href="paper/tnnls2021-hawk.pdf">[paper]</a> 
+<p><span class="style11">&bull; Y. Hei', R. Yang', H. Peng, L. Wang, X. Xu, J. Liu, H. Liu, J. Xu, L. Sun. Hawk: Reliable Android Malware Detection through Heterogeneous Graph Neural Network. IEEE Trans. on Neural Networks and Learning Systems (TNNLS) (IF=14.26) <a href="paper/tnnls2021-hawk.pdf">[paper]</a> 
 </span></p>
 
 <p><span class="style11">&bull; R. Yang', J. Zhu', C. Hu, T. Wo, S. Xue, J. Ouyang, J. Xu. Perph: A Workload Co-location Agent with Online Performance Prediction and Resource Inference. IEEE/ACM International Symposium on Cluster, Cloud and Internet Computing (CCGRID) <a href="paper/ccgrid2021.pdf">[paper]</a>  </span></p>
@@ -166,7 +170,7 @@ Contrastive Learning for UAV Anomaly Detection,  IEEE Trans. on Knowledge and Da
 <p><span class="style11">&bull; H. Peng, J. Li, Y. Song, R. Yang, R. Ranjan, P. S. Yu, L. He. Streaming Social Event Detection and Evolution Discovery in Heterogeneous Information Networks, ACM Trans. on Knowledge Discovery from Data (TKDD) <a href="paper/tkdd2021.pdf">[paper]</a> 
 </span></p>
 
-<p><span class="style11">&bull; H. Peng, R. Zhang, Y. Dou, R. Yang, J. Zhang, and P. S. Yu. Reinforced Neighborhood Selection Guided Multi-Relational Graph Neural Networks. ACM Trans. on Information Systems (TOIS) <a href="paper/tois2021-riognn.pdf">[paper]</a><a href="https://arxiv.org/abs/2104.07886">[arxiv]</a> 
+<p><span class="style11">&bull; H. Peng, R. Zhang, Y. Dou, R. Yang, J. Zhang, and P. S. Yu. Reinforced Neighborhood Selection Guided Multi-Relational Graph Neural Networks. ACM Trans. on Information Systems (TOIS) <a href="paper/tois2021-riognn.pdf">[paper]</a><a href="https://arxiv.org/abs/2104.07886">[arxiv]</a>  <span class="red">(Hot Paper in ESI)</span>
 </span></p>
 
 <p lang="en-US"><span class="red">2020</span></p>
@@ -213,7 +217,7 @@ IEEE Trans. on Parallel and Distributed Systems (TPDS), 2019
 <a href="paper/socc2019-perphon.pdf"> [paper]</a>
 </span></p>
 
-<p><span class="style11"> &bull; P. Garraghan, X. Ouyang, R. Yang*, D. McKee, J. Xu. Straggler Root-cause and Impact Analysis for Massive-scale Virtualized Cloud Datacenters, in IEEE Trans. on Services Computing (TSC) (SCI-IF = 4.418, Q1) <a href="paper/tsc2016b.pdf">[paper]</a>
+<p><span class="style11"> &bull; P. Garraghan, X. Ouyang, R. Yang*, D. McKee, J. Xu. Straggler Root-cause and Impact Analysis for Massive-scale Virtualized Cloud Datacenters, in IEEE Trans. on Services Computing (TSC) (IF=11.02, CCF-A) <a href="paper/tsc2016b.pdf">[paper]</a>
 </span></p>
 
 <p><span class="style11">  &bull; H. Peng, J. Li, S. Wang, L. Wang, Q. Gong, R. Yang, B. Li, L. He and P. S. Yu. Hierarchical Taxonomy-Aware and Attentional Graph Capsule RCNNs for Large-Scale Multi-Label Text Classification. IEEE Trans. on Knowledge and Data Engineering (TKDE), 2019 <a href="paper/tkde2019.pdf">[paper]</a>  <span class="red">(Highly Cited Paper)</span>
@@ -255,7 +259,7 @@ SysOptic: A Fine-Grained Monitoring System for Virtual Machines Based on PMU. in
 <p><span class="style11">  &bull; R. Yang. Efficient and Reliable Resource Scheduling at Internet Scale: Theory and Practice, PhD. thesis, 2017 <span class="red"> (with Honor, Outstanding Graduate Award of Beijing Graduates)</span>
 </span></p>
 
-<p><span class="style11">  &bull; R. Yang, Y. Zhang, P. Garraghan, Y.Feng, J. Ouyang, J. Xu, Z. Zhang, C. Li. Reliable Cloud Service in Massive-scale Systems through Effective Low-cost Failover. in IEEE Trans. on Services Computing (TSC) (SCI-IF = 4.418, Q1)  
+<p><span class="style11">  &bull; R. Yang, Y. Zhang, P. Garraghan, Y.Feng, J. Ouyang, J. Xu, Z. Zhang, C. Li. Reliable Cloud Service in Massive-scale Systems through Effective Low-cost Failover. in IEEE Trans. on Services Computing (TSC) (IF=11.02, CCF-A) 
 <a href="paper/tsc2016.pdf">[paper]</a> 
 </span></p>
 
