--- a/publications_topics.html
+++ b/publications_topics.html
@@ -79,7 +79,7 @@ p{ margin:10px auto}
 
 <br>
 <!--table width="1550" height="359"-->
-<table style="width: 85%; height: auto;">
+<table style="width: 90%; height: auto;">
 <tbody>
 
 <tr>
@@ -101,7 +101,7 @@ p{ margin:10px auto}
 
 <p><span class="style10">Recent Publications (By Year) &nbsp;&nbsp;&nbsp; <a href="./index.html">[home]</a> 
 	<a href="./publications_topics.html">[topics]</a>
-	<a href="./publications.html">[years] </a></span>&nbsp;&nbsp; &nbsp;&nbsp;</p>
+	<a href="./publications.html">[years]</a></span>&nbsp;&nbsp; &nbsp;&nbsp;</p>
 
 <hr style="width:100%;text-align:left;margin-left:0">
 
@@ -124,9 +124,6 @@ p{ margin:10px auto}
 <p><span class="style11"> &bull; X. Sun, W. Wang, S. Qiu, R. Yang, S. Huang, J. Xu, Z. Wang. STRONGHOLD: Fast and Affordable Billion-scale Deep Learning Model Training. IEEE/ACM International Conference for High Performance Computing, Networking, Storage, and Analysis (SC), 2022
 <a href="paper/sc2022.pdf">[paper]</a> 
 </span></p>
-	
-<p><span class="style11">&bull; C. Mommessin', R. Yang', N. Shakhlevich, X. Sun, S. Kumar, J. Xiao, J. Xu. Affinity-Aware Resource Provisioning for Long-Running Applications in Shared Clusters. arXiv Preprint, arXiv:2208.12738
-<a href="https://arxiv.org/pdf/2208.12738.pdf">[arxiv]</a>
 
 <p><span class="style11"> &bull; G. Yeung, B. Borowiec, R. Yang*, A. Friday, R. Harper, P. Garraghan. Horus: Interference-aware and Prediction-based Scheduling in Deep Learning Systems. IEEE Trans. on Parallel and Distributed Systems (TPDS), 2021 
 <a href="paper/tpds2021-horus.pdf">[paper]</a> 
@@ -135,6 +132,10 @@ p{ margin:10px auto}
 <p><span class="style11">&bull; R. Yang, C. Hu, X. Sun, P. Garraghan, T. Wo, Z. Wen, H. Peng, J. Xu and C. Li. Performance-aware Speculative Resource Oversubscription for Large-scale Clusters, 
 IEEE Trans. on Parallel and Distributed Systems (TPDS), 2020 
 <a href="paper/tpds2020-rose.pdf">[paper]</a> 
+</span></p>
+
+<p><span class="style11">&bull; C. Mommessin', R. Yang'*, N. Shakhlevich, X. Sun, S. Kumar, J. Xiao, J. Xu. Affinity-Aware Resource Provisioning for Long-Running Applications in Shared Clusters. Journal of Parallel and Distributed Computing (JPDC), 2023
+<a href="paper/jpdc2023.pdf">[paper]</a> <a href="https://arxiv.org/pdf/2208.12738.pdf">[arxiv]</a>
 </span></p>
 
 <p><span class="style11">&bull; R. Yang', J. Zhu', C. Hu, T. Wo, S. Xue, J. Ouyang and J. Xu. Perphon: a ML-based Agent for Workload Co-location via Performance Prediction and Resource Inference. ACM Symposium on Cloud Computing (SoCC), 2019  <a href="paper/socc2019-perphon.pdf"> [paper]</a>
@@ -209,10 +210,10 @@ IEEE Trans. on Parallel and Distributed Systems (TPDS), 2019
 <a href="paper/tpds2019-gapar-full.pdf">[full version]</a> <a href="paper/tpds2019-gapar.pdf">[paper]</a> 
 </span></p>
 
-<p><span class="style11">&bull; R. Yang, Y. Zhang, P. Garraghan, Y. Feng, J. Ouyang, J. Xu, Z. Zhang, C. Li. Reliable Cloud Service in Massive-scale Systems through Effective Low-cost Failover. in IEEE Trans. on Services Computing (TSC), 2017 (SCI-IF = 4.418, Q1) <a href="paper/tsc2016.pdf">[paper]</a> 
+<p><span class="style11">&bull; R. Yang, Y. Zhang, P. Garraghan, Y. Feng, J. Ouyang, J. Xu, Z. Zhang, C. Li. Reliable Cloud Service in Massive-scale Systems through Effective Low-cost Failover. in IEEE Trans. on Services Computing (TSC), 2017 (IF=11.02, CCF-A) <a href="paper/tsc2016.pdf">[paper]</a> 
 </span></p>
 
-<p><span class="style11">&bull; P. Garraghan, X. Ouyang, R. Yang*, D. McKee, J. Xu. Straggler Root-cause and Impact Analysis for Massive-scale Virtualized Cloud Datacenters, in IEEE Trans. on Services Computing (TSC), 2017 (SCI-IF = 4.418, Q1) <a href="paper/tsc2016b.pdf">[paper]</a>
+<p><span class="style11">&bull; P. Garraghan, X. Ouyang, R. Yang*, D. McKee, J. Xu. Straggler Root-cause and Impact Analysis for Massive-scale Virtualized Cloud Datacenters, in IEEE Trans. on Services Computing (TSC), 2017 (IF=11.02, CCF-A) <a href="paper/tsc2016b.pdf">[paper]</a>
 </span></p>
 
 <p><span class="style11">&bull; X. Ouyang, P. Garraghan, R. Yang, P. Townend, and J. Xu. Reducing Late-Timing Failure at Scale: Straggler Root-Cause Analysis in Cloud Datacenters, in the 46th IEEE/IFIP DSN 2016 (short) <a href="paper/dsn2016.pdf">[paper]</a>
@@ -238,11 +239,15 @@ IEEE Trans. on Parallel and Distributed Systems (TPDS), 2019
 
 <p lang="en-US"><span class="red"> Big Data and Deep Learning: Systems and Applications </span></p>
 
-<p><span class="style11">&bull; R. Yang', Y. Yang', Y. Li, K. Cui, Z. Yang, Y. Wang, J. Xu, H. Xie. RoSGAS: Adaptive Social Bot Detection with Reinforced Self-supervised GNN Architecture Search.  Transactions on the Web (TWEB), 2022
+<p><span class="style11">&bull; Y. Yang, R. Yang*, H. Peng, Y. Li, T. Li, Y. Liao, P. Zhou. FedACK: Federated Adversarial Contrastive Knowledge Distillation for Cross-Lingual and Cross-Model Social Bot Detection. ACM WWW 2023 <a href="paper/www2023-fedack.pdf">[paper]</a></span></p>
+
+<p><span class="style11">&bull; R. Yang', Y. Yang', Y. Li, K. Cui, Z. Yang, Y. Wang, J. Xu, H. Xie. RoSGAS: Adaptive Social Bot Detection with Reinforced Self-supervised GNN Architecture Search. Transactions on the Web (TWEB), 2022
 <a href="paper/tweb2022-rosgas.pdf">[paper]</a><a href="https://arxiv.org/pdf/2206.06757">[arxiv]</a> 
 </span></p>
 
-<p><span class="style11">&bull; Z. Wen, H. Hu, R. Yang*, B. Qian, R. Sham, R. Sun, J. Xu, P. Patel, O. Rana, S. Dustdar, R. Ranjan. Orchestrating Networked Machine Learning Applications using Autosteer, IEEE Internet Computing, 2022 <a href="paper/ic2022.pdf">[paper]</a> 
+<p><span class="style11">&bull; D. Zou, H. Peng, X. Huang, R. Yang, J. Li, J. Wu, C. Liu, P. S. Yu. SE-GSL: A General and Effective Graph Structure Learning Framework through Structural Entropy Optimization. ACM WWW 2023 <a href="paper/www2023-segsl.pdf">[paper]</a></span></p>
+
+<p><span class="style11">&bull; Z. Wen, H. Hu, R. Yang*, B. Qian, R. Sham, R. Sun, J. Xu, P. Patel, O. Rana, S. Dustdar, R. Ranjan. Orchestrating Networked Machine Learning Applications using Autosteer. IEEE Internet Computing, 2022 <a href="paper/ic2022.pdf">[paper]</a> 
 </span></p>
 
 <p><span class="style11">&bull; H. Peng, R. Yang, Z. Wang, J. Li, L. He, P. S. Yu, A. Y. Zomaya, R. Ranjan. LIME: Low-Cost and Incremental Learning for Dynamic Heterogeneous Information Networks. IEEE Trans. on Computers (TC), 2021 
@@ -252,7 +257,7 @@ IEEE Trans. on Parallel and Distributed Systems (TPDS), 2019
 <p><span class="style11">&bull; H. Peng, J. Li, Y. Song, R. Yang, R. Ranjan, P. S. Yu, L. He. Streaming Social Event Detection and Evolution Discovery in Heterogeneous Information Networks, ACM Trans. on Knowledge Discovery from Data (TKDD), 2021 <a href="paper/tkdd2021.pdf">[paper]</a> 
 </span></p>
 
-<p><span class="style11">&bull; H. Peng, R. Zhang, Y. Dou, R. Yang, J. Zhang, and P. S. Yu. Reinforced Neighborhood Selection Guided Multi-Relational Graph Neural Networks, ACM Trans. on Information Systems (TOIS), 2021 <a href="paper/tois2021-riognn.pdf">[paper]</a>
+<p><span class="style11">&bull; H. Peng, R. Zhang, Y. Dou, R. Yang, J. Zhang, and P. S. Yu. Reinforced Neighborhood Selection Guided Multi-Relational Graph Neural Networks, ACM Trans. on Information Systems (TOIS), 2021 <a href="paper/tois2021-riognn.pdf">[paper]</a><span class="red">(Hot Paper in ESI)</span>
 </span></p>
 
 <p><span class="style11">&bull; Q. Li, H. Peng, J. Li, C. Xia, R. Yang, L. Sun, P. S. Yu, L. He. A Survey on Text Classification: from Traditional to Deep Learning. ACM Trans. on  Intelligent Systems and Technology (TIST) <a href="paper/tist2021.pdf">[paper]</a>
